fixed issue of comments not showing up right away

--- a/ctfrontend/src/App.css
+++ b/ctfrontend/src/App.css
@@ -10,7 +10,4 @@ textarea{
   background-color: white;
 }
 
-.videos{
-  display: flex;
-  justify-content: space-around;
-}
+
